# open-filament-database

./: .gitignore  README.md  ofd.bat  ofd.sh  pyproject.toml
.github/: copilot-instructions.md
.github/PULL_REQUEST_TEMPLATE/: data-addition.md
.github/workflows/: build-dataset.yml  update_profiles.yaml  validate_data.yaml
config/: adwaita.css  theme.css
data/3d_printing_canada/PETG/: material.json
data/3d_printing_canada/PLA/: material.json
data/add_north/PLA/: material.json
data/anycubic/ASA/: material.json
data/anycubic/PETG/: material.json
data/duramic_3d/PLA/: material.json
data/eryone/PLA/: material.json
data/flashforge/: brand.json
data/isanghu/ASA/: material.json
data/isanghu/PETG/: material.json
data/l3d/PETG/: material.json
data/l3d/PLA/: material.json
data/lostboyslab/PETG/: material.json
data/overture/TPU/: material.json
data/professional_lab/: brand.json
data/professional_lab/ABS/: material.json
data/professional_lab/PETG/: material.json
data/professional_lab/PLA/: material.json
data/professional_lab/TPU/: material.json
data/proteor_print/EVA/: material.json
data/proteor_print/PETG/: material.json
data/proteor_print/PP/: material.json
data/smartprint/: brand.json
data/smartprint/PA12/: material.json
data/tecbears/PETG/: material.json
data/tecbears/PLA/: material.json
data/unitak3d/PLA/: material.json
docs/: cloning.md  forking.md  installing-software.md  manual.md  pull-requesting.md  validation.md  webui.md
ofd/: __init__.py  __main__.py  base.py
ofd/builder/: __init__.py  crawler.py  errors.py  models.py  serialization.py  utils.py
ofd/builder/exporters/: __init__.py  api_exporter.py  csv_exporter.py  directory_listing_exporter.py  html_exporter.py  json_exporter.py  (+2 more)
ofd/commands/: __init__.py  build.py  script.py  serve.py  validate.py  webui.py
ofd/scripts/: __init__.py  export_data.py  load_profiles.py  style_data.py
ofd/validation/: __init__.py  orchestrator.py  types.py  validators.py
stores/beehive/: store.json
stores/clas_ohlson/: store.json
stores/imaginesc/: store.json
(+9303 files in other folders)
